manifests/dev/immich/Ingress-immich-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: immich-local
  namespace: immich
spec:
  ingressClassName: traefik
  rules:
    - host: immich.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: immich
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - immich.home.kronkltd.net
      secretName: immich-local-tls
